--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,7 @@ jobs:
     - uses: cachix/install-nix-action@v20
       with:
         nix_path: nixpkgs=channel:nixpkgs-unstable
+        install_url: https://releases.nixos.org/nix/nix-2.13.3/install
         extra_nix_config: |
           keep-outputs = true
           keep-derivations = true
